--- a/debian/control
+++ b/debian/control
@@ -5,15 +5,15 @@ Maintainer: Magnus Runesson <magru@linuxalert.org>
 Build-Depends: debhelper (>= 7.0.50~), xsltproc, docbook-xsl
 Standards-Version: 3.9.1
 Homepage: http://www.linuxalert.org/project/flac-utils/
-#Vcs-Git: git://git.debian.org/collab-maint/flac-utils.git
-#Vcs-Browser: http://git.debian.org/?p=collab-maint/flac-utils.git;a=summary
+Vcs-Git: git://github.com/mrunesson/flac-utils.git
+Vcs-Browser: https://github.com/mrunesson/flac-utils
 
 Package: flac-utils
 Architecture: all
-Depends: ${misc:Depends}, python-flaccompare, ${python:Depends}, python-argparse, python-mutagen, python-musicbrainz2, flac
+Depends: ${misc:Depends}, python-flaccompare (>= 0.3.1), ${python:Depends}, python-argparse, python-mutagen, python-musicbrainz2, flac
 XB-Python-Version: ${python:Versions}
 Description: Toolkit for managing flac-files
  Flac-utils includ tools to compare flac files on metadata. It can also
- sync and merge flacfiles. The sync works a bit like rsync but works on the 
- metadata.
+ sync flac files and add album cover art. The sync works a bit like rsync
+ but works on the metadata.
 
